--- a/src/main/resources/templates/mail/scheduled-mail.html
+++ b/src/main/resources/templates/mail/scheduled-mail.html
@@ -103,7 +103,8 @@
 
                 <!-- START CENTERED WHITE CONTAINER -->
                 <span class="preheader"
-                      style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">PREVIEW_MESSAGE</span>
+                      style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;"
+                      th:text="${preview_message}"></span>
                 <table class="main"
                        style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 3px;">
 
@@ -123,6 +124,10 @@
                                             Dear <span th:text="${admin_config.getAdminName()}"></span>,</p>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"
                                            th:text="${message}"></p>
+                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
+                                            Your tasks:
+                                        </p>
+                                        </ul>
                                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary"
                                                style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
                                             <tbody>
@@ -146,12 +151,6 @@
                                             </tr>
                                             </tbody>
                                         </table>
-                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-                                            Application functionality:
-                                        </p>
-                                        <ul th:each="function : ${application_functionality}">
-                                            <li th:text="${function}"></li>
-                                        </ul>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"
                                            th:text="${goodbye_message}"></p>
                                     </td>
@@ -159,6 +158,7 @@
                             </table>
                         </td>
                     </tr>
+
                     <!-- END MAIN CONTENT AREA -->
                 </table>
 
@@ -169,15 +169,15 @@
                         <tr>
                             <td class="content-block"
                                 style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;"
-                                <span th:text="${company_name}"></span>
-                                <br>
-                                <span th:text="${company_goal}"></span>
-                                <br>
-                                <span th:text="${company_email}"></span>
-                                <br>
-                                <span th:text="${company_phone}"></span>
-                                </span>
+                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">
+                  <span th:text="${company_name}"></span>
+                  <br>
+                  <span th:text="${company_goal}"></span>
+                  <br>
+                  <span th:text="${company_email}"></span>
+                  <br>
+                  <span th:text="${company_phone}"></span>
+                </span>
                             </td>
                         </tr>
                     </table>
